@@ -258,6 +258,9 @@ UNRELEASED CHANGES
       updated and will issue a DeprecationWarning using the warnings module
       when they are used. (Robert Collins)
 
+    * bzrlib.osutils.safe_unicode now exists to provide parameter coercion
+      for functions that need unicode strings. (Robert Collins)
+
 bzr 0.6 2005-10-28
 
   IMPROVEMENTS:
